--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ header{
 body {
     background-color: rgb(59, 59, 59);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 16px;
+    font-size: 1rem;
     padding: 0em;
     margin: 0em;
     display: grid;
@@ -19,20 +19,20 @@ body {
 
 .box {
     position: relative;
-    width: 325px;
-    height: 400px;
-    border-radius: 20px;
+    width: 20.3125rem;
+    height: 25rem;
+    border-radius: 1.25rem;
     display: grid;
     place-items: center;
     overflow: hidden;
-    box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.582);
+    box-shadow: 8px 8px 16px rgba(0, 0, 0, 0.582);
 }
 
 .box::before {
     content: '';
     position: absolute;
-    width: 500px;
-    height: 500px;
+    width: 31.25rem;
+    height: 31.25rem;
     background-image: conic-gradient(transparent, transparent, transparent, rgb(0, 0, 255));
     animation: rotate 4s linear infinite;
 }
@@ -40,8 +40,8 @@ body {
 .box::after {
     content: '';
     position: absolute;
-    width: 500px;
-    height: 500px;
+    width: 31.25rem;
+    height: 31.25rem;
     background-image: conic-gradient(transparent, transparent, transparent, rgb(255, 0, 0));
     animation: rotate 4s linear infinite;
     animation-delay: 2s;
@@ -49,16 +49,16 @@ body {
 
 .span{
     position: absolute;
-    inset: 5px;
-    border-radius: 16px;
+    inset: 0.3125rem;
+    border-radius: 1rem;
     z-index: 2;
 }
 
 .conteiner {
     position: absolute;
     background-color: rgb(0, 0, 0);
-    inset: 0px;
-    border-radius: 16px;
+    inset: 0rem;
+    border-radius: 1rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -68,64 +68,68 @@ body {
 .placar {
     position: relative;
     width: 260px;
-    height: 90px;
-    bottom: 125px;
-    border-radius: 13px;
-    border: 5px inset rgb(78, 127, 172);
+    height: 5.625rem;
+    bottom: 7.8125rem;
+    border-radius: 0.8125rem;
+    border: 0.3125rem inset rgb(78, 127, 172);
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: row;
     background-color: rgb(185, 186, 209);
-    font-size: 15px;
+    font-size: 0.9375rem;
 }
 
 .top {
     position: absolute;
     text-align: center;
-    padding-bottom: 50px;
-    font-size: 17px;
+    padding-bottom: 3.125rem;
+    font-size: 1.0625rem;
 }
 
 .playerx {
     position: relative;
-    right: -19px;
+    right: -1.1875rem;
 }
 
 #x {
+    position: relative;
+    left: 0.3125rem;
     color: blue;
 }
 
 #o {
+    position: relative;
     color: red;
+    left: 0.3125rem;
 }
 
 .playero {
     position: relative;
-    top: 20px;
-    right: 50px;
+    top: 1.25rem;
+    right: 3.125rem;
 }
 
 .vezdo {
     position: relative;
-    left: 26px;
+    left: 1.625rem;
 }
 
 #vezres {
     position: relative;
-    top: 20px;
-    right: 29px;
+    top: 1.25rem;
+    right: 3.125rem;
     color: rgb(0, 0, 255);
 }
 
 .boxgame {
     position: absolute;
-    width: 260px;
-    height: 225px;
+    width: 16.25rem;
+    height: 14.0625rem;
     background-color: rgb(185, 186, 209);
-    top: 140px;
-    border: 5px inset rgb(78, 127, 172);
-    border-radius: 13px;
+    top: 8.75rem;
+    border: 0.3125rem inset rgb(78, 127, 172);
+    border-radius: 0.8125rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -135,9 +139,9 @@ body {
 .linhas {
     position: absolute;
     background-color: rgb(0, 0, 0);
-    width: 225px;
-    height: 7px;
-    border-radius: 5px;
+    width: 14.0625rem;
+    height: 0.4375rem;
+    border-radius: 0.3125rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -147,32 +151,32 @@ body {
 #linha1 {
     position: absolute;
     transform: rotate(90deg);
-    width: 190px;
-    right: -5px;
+    width: 11.875rem;
+    right: -0.3125rem;
 }
 
 #linha2 {
     position: absolute;
     transform: rotate(90deg);
-    width: 190px;
-    left: -5px;
+    width: 11.875rem;
+    left: -0.3125rem;
 }
 
 #linha3 {
     position: absolute;
-    top: 75px;
+    top: 4.6875rem;
 }
 
 #linha4 {
     position: absolute;
-    bottom: 75px;
+    bottom: 4.6875rem;
 }
 
 .xo {
     position: relative;
-    font-size: 35px;
-    width: 72px;
-    height: 65px;
+    font-size: 2.1875rem;
+    width: 4.5rem;
+    height: 4.0625rem;
     text-align: center;
     display: flex;
     align-items: center;
@@ -182,31 +186,31 @@ body {
 
 .xol {
     position: absolute;
-    padding-right: 0px;
-    padding-bottom: 3px;
+    padding-right: 0rem;
+    padding-bottom: 0.1875rem;
     text-align: center;
 }
 
 #xo1 {
     position: absolute;
-    top: 12px;
-    right: 173px;
+    top: 0.75rem;
+    right: 10.8125rem;
 }
 
 #xo2 {
     position: absolute;
-    top: 12px;
+    top: 0.75rem;
 }
 
 #xo3 {
     position: absolute;
-    top: 12px;
-    right: 17px;
+    top: 0.75rem;
+    right: 1.0625rem;
 }
 
 #xo4 {
     position: absolute;
-    right: 173px;
+    right: 10.8125rem;
 }
 
 #xo5 {
@@ -215,24 +219,24 @@ body {
 
 #xo6 {
     position: absolute;
-    right: 17px;
+    right: 1.0625rem;
 }
 
 #xo7 {
     position: absolute;
-    bottom: 12px;
-    right: 173px;
+    bottom: 0.75rem;
+    right: 10.8125rem;
 }
 
 #xo8 {
     position: absolute;
-    bottom: 12px;
+    bottom: 0.75rem;
 }
 
 #xo9 {
     position: absolute;
-    bottom: 12px;
-    right: 17px;
+    bottom: 0.75rem;
+    right: 1.0625rem;
 }
 
 
